greet-app.yaml
---
apiVersion: "v1"
kind: "Namespace"
metadata:
  name: "greet"
---
apiVersion: "apps/v1"
kind: "Deployment"
metadata:
  name: "greet-app"
  namespace: "greet"
  labels:
    app: "greet-app"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "greet-app"
  template:
    metadata:
      labels:
        app: "greet-app"
    spec:
      containers:
      - name: "greet-1"
        image: "gcr.io/newscorp-newsiq-dev/greet:latest"
        resources:
          limits:
            cpu: 200m
            memory: 50Mi
          requests:
            cpu: 100m
            memory: 30Mi        
---

apiVersion: v1
kind: Service
metadata:
  name: greet-service
  namespace: greet
  labels:
    app: greet-app
    component: redis
spec:
  ports:
  - port: 8080
    protocol: TCP
  selector:
    app: greet-app
    component: redis
